# nv-redfish

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
bmc-http/: Cargo.toml
bmc-http/benches/: cache.rs
bmc-http/src/: cache.rs  credentials.rs  lib.rs  reqwest.rs
bmc-http/tests/: common.rs  etag_cache_tests.rs  reqwest_client_tests.rs
bmc-mock/src/: expect.rs  lib.rs
core/: Cargo.toml
core/src/: action.rs  bmc.rs  deserialize.rs  edm_date_time_offset.rs  lib.rs  odata.rs  upload.rs
csdl-compiler/src/: commands.rs  main.rs
csdl-compiler/src/compiler/: compiled.rs  error.rs  mod.rs  namespace.rs  qualified_name.rs  schema_index.rs
csdl-compiler/src/generator/rust/: mod.rs  mod_def.rs  struct_def.rs
dispatcher/: Cargo.toml
dispatcher/examples/: composable_tree.rs
dispatcher/sim/: Cargo.toml
dispatcher/sim/src/: lib.rs
dispatcher/src/: lib.rs  runtime.rs
dispatcher/src/schedulers/: bounded_concurrency.rs  circuit_breaker.rs  fixed_cost.rs  periodic_leaf.rs  round_robin.rs  strict_priority.rs  token_bucket.rs
dispatcher/tests/: op_scaling.rs  simulation.rs
examples/explore-with-dummy-bmc/src/: main.rs
examples/task-service/src/: main.rs
examples/update-multipart/: Cargo.toml
examples/update-multipart/src/: main.rs
redfish/: Cargo.toml  build.rs  features.toml
redfish/src/: bmc_quirks.rs  control.rs  error.rs  service_root.rs
redfish/src/account/: collection.rs  item.rs
redfish/src/chassis/: item.rs  power_supply.rs
redfish/src/computer_system/: boot_option.rs  item.rs  mod.rs
redfish/src/manager/: item.rs  mod.rs  network_protocol.rs
redfish/src/oem/: mod.rs
redfish/src/oem/ami/: ami_service_root.rs  mod.rs
redfish/src/oem/delta/: compiled_schema.rs  mod.rs  power_supply.rs
redfish/src/patch_support/: collection.rs  payload.rs
redfish/src/session_service/: item.rs
redfish/src/task_service/: mod.rs
redfish/src/telemetry_service/: metric_definition.rs  metric_report_definition.rs  mod.rs
redfish/src/update_service/: mod.rs
schema/oem/ami/: AMIServiceRoot_v1.xml
schema/oem/delta/: DeltaEnergySystemsPowerSupply_v1.xml
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: test-chassis-oem-delta-power-supply.rs  test-chassis.rs  test-computer-system.rs  test-manager.rs  test-service-root-oem-ami.rs  test-session-service.rs  test-task-service.rs  test-telemetry-service.rs  test-update-service.rs  tests-account-service.rs  tests-base-operations.rs
tests/tests/compile-fails/: no-debug-for-action-parameters.rs  no-debug-for-action-parameters.stderr
