[package]
name = "nv-redfish-bmc-http"
description = "HTTP client for nv-redfish"
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/nv-redfish-bmc-http"

[features]
default = ["reqwest"]

# HTTP client implementations with reqwest
reqwest = ["dep:reqwest", "dep:serde_path_to_error", "dep:futures-util", "dep:sse-stream", "dep:tokio-util", "dep:tokio"]
update-service-deprecated = ["nv-redfish-core/update-service-deprecated"]

[dependencies]
futures-core = { workspace = true }
futures-util = { workspace = true, optional = true }
nv-redfish-core = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true, optional = true, features = [
    "json",
    "multipart",
    "rustls-tls",
    "stream",
    "socks"
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true, optional = true }
sse-stream = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["time"] }
tokio-util = { workspace = true, optional = true, features = ["compat", "io"] }
url = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
time = { workspace = true, features = ["serde", "formatting", "parsing"] }

[build-dependencies]
nv-redfish-csdl-compiler = { workspace = true }
nv-redfish-schema = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-test = { workspace = true }
wiremock = { workspace = true }

# Compiles only on unix: the runner library it pulls in uses
# std::os::unix and nix unconditionally.
[target.'cfg(unix)'.dev-dependencies]
gungraun = { workspace = true }
rustc-hash = { workspace = true }

[[bench]]
name = "cache"
harness = false
