[package]
name = "update-multipart"
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
futures-util = { workspace = true, features = ["io"] }
nv-redfish = { workspace = true, features = ["bmc-http", "update-service"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
url = { workspace = true }
